applied standard class to "Select Company" label and sorted results alphabetically ascending. Cleanup across company pages. Files modified - [MunicipalityUsers.html,CompanyProfile.html,selectCompany.html,CompanyForms.html,CompanyMunicipalities.html,CompanyUsers.html]

--- a/src/main/webapp/pages/CompanyForms/CompanyForms.html
+++ b/src/main/webapp/pages/CompanyForms/CompanyForms.html
@@ -70,6 +70,7 @@
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn11_1"></wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow8">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn11">
