--- a/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
+++ b/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
@@ -87,7 +87,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="view2">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="User Details" iconclass="wi wi-user" name="dialogUserProfile">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="User Details" iconclass="wi wi-person" name="dialogUserProfile">
             <wm-dialogactions name="dialogactions2">
                 <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button7_1" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
@@ -167,7 +167,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="viewAdminProfile">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Admin Details" iconclass="wi wi-user" name="dialogAdminProfile">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Admin Details" iconclass="wi wi-person" name="dialogAdminProfile">
             <wm-dialogactions name="dialogactions4">
                 <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button9" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
