--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -123,7 +123,7 @@
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="view1">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="User Details" iconclass="wi wi-user" name="dialog1">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="User Details" iconclass="wi wi-person" name="dialog1">
             <wm-dialogactions name="dialogactions1">
                 <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
@@ -243,7 +243,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="view6_1">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Employee Details" iconclass="wi wi-user" name="EmployeeDialog">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Employee Details" iconclass="wi wi-person" name="EmployeeDialog">
             <wm-dialogactions name="dialogactions6">
                 <wm-button class="btn-secondary" caption="Close" on-click="Widgets.EmployeeDialog.close()" name="button10" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
@@ -333,7 +333,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="view7">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Admin Details" iconclass="wi wi-user" name="Admindialog">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Admin Details" iconclass="wi wi-person" name="Admindialog">
             <wm-layoutgrid name="layoutgrid8_1">
                 <wm-gridrow name="gridrow27_1">
                     <wm-gridcolumn columnwidth="2" name="gridcolumn49_2"></wm-gridcolumn>
