--- a/src/main/webapp/pages/selectCompany/selectCompany.html
+++ b/src/main/webapp/pages/selectCompany/selectCompany.html
@@ -3,9 +3,9 @@
         <wm-gridrow name="gridrow2">
             <wm-gridcolumn columnwidth="12" name="gridcolumn4">
                 <wm-composite name="composite1">
-                    <wm-label class="col-md-3 control-label" name="label1" caption="Select Company"></wm-label>
+                    <wm-label class="col-md-3 form-control-static" name="label1" caption="Select Company" fontweight="bold"></wm-label>
                     <wm-container class="col-md-9" name="container1">
-                        <wm-select name="selectCompany" dataset="bind:Variables.AdminVendorsList.dataSet" datafield="All Fields" displayfield="CompanyName" orderby="CompanyName:desc" datavalue="bind:getSelectedCompany()"></wm-select>
+                        <wm-select name="selectCompany" dataset="bind:Variables.AdminVendorsList.dataSet" datafield="All Fields" displayfield="CompanyName" orderby="CompanyName:asc" datavalue="bind:getSelectedCompany()"></wm-select>
                     </wm-container>
                 </wm-composite>
             </wm-gridcolumn>
