Cleaned up pages and updated dialogs for ManageInspections and EditInspection. Identified a couple issues on ManageForms and EditForm to clean up Files modified - [ManageForms.html,ManageInspections.html,EditForm.html,EditInspection.html,EditInspection.variables.json,ManageInspections.variables.json]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -272,13 +272,13 @@
                                                     <wm-layoutgrid columns="1" name="layoutgrid9">
                                                         <wm-gridrow name="gridrow37">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn62">
-                                                                <wm-form-field name="formCategories" displayname="What Category would you like to assign to this Form?" show="true" primary-key="false" generator="assigned" key="formCategories" type="list" is-related="true"
+                                                                <wm-form-field name="formCategories" displayname="What category would you like to assign to this form?" show="true" primary-key="false" generator="assigned" key="formCategories" type="list" is-related="true"
                                                                 required="required" widget="select" dataset="bind:Variables.Categories.dataSet" datafield="All Fields" displayfield="category" orderby="category:asc" placeholder="Select Category"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow30">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn62_1">
-                                                                <wm-label name="label62_1" caption="If this Form belongs in a Category that isn't available above, you can create a new Category on the Manage Forms page." margin="1em unset unset unset"></wm-label>
+                                                                <wm-label name="label62_1" caption="If this form belongs in a category that isn't available above, you can create a new category on the Manage Forms page." margin="1em unset unset unset"></wm-label>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                     </wm-layoutgrid>
