--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow25_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn57_1" padding="2em unset">
-                        <wm-label name="label2_1" caption="bind:'Edit Form: ' + Variables.CurrentInspectionObj.dataSet.data[$i].inspectDesignName + ' (' + Variables.CurrentInspectionObj.dataSet.data[$i].municipalities.municipalityName + ')'" fontweight="bold"
+                        <wm-label name="label2_1" caption="bind:'Edit Inspection: ' + Variables.CurrentInspectionObj.dataSet.data[$i].inspectDesignName + ' (' + Variables.CurrentInspectionObj.dataSet.data[$i].municipalities.municipalityName + ')'" fontweight="bold"
                         class="h4"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
@@ -39,23 +39,28 @@
                                                     <wm-grid-action key="addNewRow" display-name="Add Category" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Category" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                                 </wm-grid>
-                                                <wm-liveform novalidate="false" errormessage="" title="Add Category" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.InspectionCategoryMappingData.dataSet" captionalign="left" captionposition="top"
-                                                name="liveformInspectioncategorymappin">
+                                                <wm-liveform novalidate="false" errormessage="" title="Add Inspection Category" formlayout="dialog" iconclass="wi wi-group-work" dataset="bind:Variables.InspectionCategoryMappingData.dataSet" captionalign="left"
+                                                captionposition="top" name="liveformInspectioncategorymappin">
                                                     <wm-layoutgrid columns="1" name="layoutgrid7">
                                                         <wm-gridrow name="gridrow28">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn38">
-                                                                <wm-form-field name="inspectionCategories" displayname="Inspection Categories" show="true" primary-key="false" generator="assigned" key="inspectionCategories" type="list" is-related="true" readonly="false"
-                                                                required="false" widget="autocomplete" placeholder="Search" dataset="bind:Variables.CurrentMunicipalityInspectionCategories.dataSet" searchkey="inspectionCategory" displaylabel="inspectionCategory"
-                                                                datafield="All Fields" orderby="inspectionCategory:desc"></wm-form-field>
+                                                                <wm-form-field name="inspectionCategories" displayname="What category would you like to assign to this inspection?" show="true" primary-key="false" generator="assigned" key="inspectionCategories"
+                                                                type="list" is-related="true" readonly="false" required="true" widget="select" placeholder="Select Category" dataset="bind:Variables.CurrentMunicipalityInspectionCategories.dataSet" displaylabel="inspectionCategory"
+                                                                datafield="All Fields" displayfield="inspectionCategory" orderby="inspectionCategory:asc"></wm-form-field>
+                                                            </wm-gridcolumn>
+                                                        </wm-gridrow>
+                                                        <wm-gridrow name="gridrow30_1">
+                                                            <wm-gridcolumn columnwidth="12" name="gridcolumn62_2">
+                                                                <wm-label name="label62_2" caption="If this inspection belongs in a category that isn't available above, you can create a new category on the Manage Inspections page." margin="1em unset unset unset"></wm-label>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                     </wm-layoutgrid>
                                                     <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
                                                     <wm-form-field name="inspectionDesign" displayname="Inspection Design" show="false" primary-key="false" generator="assigned" key="inspectionDesign" type="list" is-related="true" readonly="false"
                                                     required="false" widget="select" placeholder="Select value" dataset="bind:Variables.CurrentInspectionObj.dataSet" datafield="All Fields" displayfield="inspectDesignName" defaultvalue="bind:Variables.CurrentInspectionObj.firstRecord"></wm-form-field>
+                                                    <wm-form-action key="save" display-name="Add Category" show="true" class="form-save btn-primary" iconclass="wi wi-plus" title="Add Category" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                                     <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button"
                                                     update-mode="true"></wm-form-action>
-                                                    <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                                 </wm-liveform>
                                             </wm-livegrid>
                                         </wm-gridcolumn>
