--- a/src/main/webapp/pages/ManageForms/ManageForms.html
+++ b/src/main/webapp/pages/ManageForms/ManageForms.html
@@ -33,7 +33,7 @@
                                             <wm-grid-column binding="FormType" caption="Form Design Name" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                             <wm-grid-column binding="CreatedDate" caption="Date Created" type="string" readonly="true" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="text" show="true"></wm-grid-column>
                                             <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                            <wm-grid-action key="customButton" display-name="New Design" show="true" class="btn-primary" iconclass="wi wi-add" title="New Design" action="Widgets.dialogCreateForm.open()" accessroles="CXAdmin"
+                                            <wm-grid-action key="customButton" display-name="New Design" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Design" action="Widgets.dialogCreateForm.open()" accessroles="CXAdmin"
                                             shortcutkey="" disabled="false" icon="wi wi-note-add"></wm-grid-action>
                                             <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="Variables.goToPage_EditForm.invoke()" disabled="false"></wm-grid-row-action>
                                             <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.dialogDeleteFormDesign.open()" accessroles="CXAdmin"
