- Passing data around for the Dashboard New files added - [selectMunicipality.css,selectMunicipality.js,selectMunicipality.html,selectMunicipality.variables.json] Files modified - [UserClosedForms.variables.json,pages-config.json,Main.html,UserOpenForms.variables.json,QueryExecutionController.java,cx2-queries.hbm.xml,MyProjects.variables.json,Cx2QueryExecutorService_V1.java,UserOpenForms.html,app.variables.json,Main.variables.json,Cx2QueryExecutorServiceImpl.java,MyProjects.html,Main.js,cx2_query.json,UserClosedForms.html,Cx2QueryExecutorService.java,app.js,Cx2QueryExecutorServiceImpl_V1.java] Removed files - [ProjectsForUsersAndSharedWithResponse.java,FormsForUsersAndSharedResponse.java]

--- a/src/main/webapp/pages/MyProjects/MyProjects.html
+++ b/src/main/webapp/pages/MyProjects/MyProjects.html
@@ -10,6 +10,15 @@
                         <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow8">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn8"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn9">
+                        <wm-panel iconclass="" autoclose="outsideClick" name="panelSelectMunicipality" title="" content="selectMunicipality" class="panel-transparent">
+                            <wm-param name="municipalityId" value="bind:pageParams.municipalityId" type="integer"></wm-param>
+                            <wm-param name="muniType" value="s" type="string"></wm-param>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
                         <wm-panel iconclass="wi wi-building" autoclose="outsideClick" name="panel1" title="My Projects" class="panel-primary">
@@ -42,7 +51,7 @@
                         <wm-composite name="composite2" required="true">
                             <wm-label class="col-md-3 form-control-static" name="label6" caption="Select Municipality" fontweight="bold" width="160px"></wm-label>
                             <wm-container class="col-md-9" name="container2" width="300px">
-                                <wm-select name="selectMunicipalityForCreateProje" dataset="bind:Variables.StandardUserMunicipalites.dataSet" datafield="All Fields" displayfield="MunicipalityName" placeholder="Select Municipality" orderby="MunicipalityName:asc"></wm-select>
+                                <wm-select name="selectMunicipalityForCreateProje" dataset="bind:Variables.StandardUserMunicipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" placeholder="Select Municipality" orderby="MunicipalityName:asc"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
